# salience

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  render.yaml
backend/: pyproject.toml
backend/salience_api/: app.py  config.py  db.py  demo_seed.py  hardware.py  schemas.py  taste.py
backend/salience_api/clips/: __init__.py  indexer.py  keyframes.py  media_probe.py  scanner.py
backend/salience_api/evaluation/: __init__.py  batches.py  metrics.py  promote.py  versions.py
backend/salience_api/features/: __init__.py  basic.py  bot_detection.py  fireworks_teacher.py  hud_ocr.py  quality_modifiers.py  screen_state_ocr.py  teacher_labels.py  weapon_ontology.py
backend/salience_api/feedback/: __init__.py  service.py
backend/salience_api/ranking/: __init__.py  highlights.py  personal_ranker.py  scoring.py
backend/tests/: test_api.py  test_bot_detection.py  test_db.py  test_demo_seed.py  test_evaluation.py  test_feedback.py  test_health.py  test_highlight_ranking.py  test_highlights.py  test_hud_ocr.py  test_indexer.py  test_keyframes.py  test_local_teacher_provider.py  test_media_probe.py  test_personal_ranker.py  test_quality_modifiers.py  test_reconcile_teacher_weapons.py  test_scanner.py  test_scoring.py  test_screen_state_ocr.py  test_student_calibrate_thresholds.py  test_student_eval_agreement.py  test_student_event_heads.py  test_student_export.py  test_student_local_teacher.py  test_student_locator.py  test_student_onnx_runtime.py  test_student_reports.py  test_student_train.py  test_teacher_labels.py  test_training_labels.py
(+43 files in other folders)
