[project]
name = "salience-api"
version = "0.1.0"
description = "Local-first Fortnite clip ranking backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "rapidocr>=3.9.0,<4",
  "onnxruntime>=1.22.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]
ml = [
  "opencv-python>=4.10.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
]
train = [
  "torch>=2.2",
  "torchvision>=0.17",
  "tqdm",
  "onnx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--basetemp=C:/tmp/salience-pytest -o cache_dir=C:/tmp/salience-pytest-cache"
markers = [
  "train: optional training smoke tests requiring torch",
]
